--- a/package.json
+++ b/package.json
@@ -15,12 +15,24 @@
   "dependencies": {
     "@nuxt/ui": "^2.13.0",
     "@statelyai/inspect": "^0.2.2",
-    "@types/p5": "^1.7.6",
-    "@types/raphael": "^2.3.9",
+    "@types/javascript-state-machine": "^2.4.6",
+    "@types/jquery": "^3.5.29",
+    "@types/pathfinding": "^0.0.9",
+    "@types/ramda": "^0.29.10",
+    "@vueuse/components": "^10.7.2",
+    "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "@xstate/vue": "^3.0.3",
+    "async": "^3.2.5",
+    "d3": "^7.8.5",
+    "javascript-state-machine": "^3.1.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.13.2",
     "nuxt": "^3.10.0",
     "p5": "^1.9.0",
+    "paper": "^0.12.17",
+    "pathfinding": "^0.4.18",
+    "ramda": "^0.29.1",
     "raphael": "^2.3.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
@@ -31,6 +43,9 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
+    "@types/async": "^3.2.24",
+    "@types/p5": "^1.7.6",
+    "@types/raphael": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vue/eslint-config-prettier": "^9.0.0",
