--- a/package.json
+++ b/package.json
@@ -60,5 +60,10 @@
     "eslint-plugin-vue": "^9.21.1",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.27"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@types/pathfinding@0.0.9": "patches/@types__pathfinding@0.0.9.patch"
+    }
   }
 }
