--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: 18.16.0
           cache: pnpm
       # Pick your own package manager and build script
       - run: pnpm install
