--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:prettier": "prettier . --write --ignore-unknown",
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
     "predeploy": "pnpm build --preset github_pages",
-    "deploy": "gh-pages -d .output/public"
+    "deploy:page": "gh-pages -d .output/public"
   },
   "dependencies": {
     "@nuxt/ui": "^2.13.0",
@@ -60,6 +60,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.21.1",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.27"
   },
