--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v3.0.0
+        with:
+          version: latest
 
       - name: Setup Node
         uses: actions/setup-node@v4.0.2
