--- a/package.json
+++ b/package.json
@@ -43,5 +43,10 @@
     "gh-pages": "^6.1.1",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.27"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@types/pathfinding@0.0.9": "patches/@types__pathfinding@0.0.9.patch"
+    }
   }
 }
